Linking classes woth css

--- a/React Projects/FirstProject/myfirstproject/src/App.css
+++ b/React Projects/FirstProject/myfirstproject/src/App.css
@@ -11,3 +11,17 @@
 .header .logo img{
     width: 100%;
 }
+.header.location{}
+.header.location.ico{}
+.header.location.label{}
+.header.location.label{}
+.header.location.arro{}
+.header.search{}
+.header.search.query{}
+.header.search.go{}
+.header.search.goHovere{}
+.header.actions {}
+
+
+
+
