--- a/React Projects/FirstProject/myfirstproject/src/App.css
+++ b/React Projects/FirstProject/myfirstproject/src/App.css
@@ -8,7 +8,9 @@
     background: #f1f1f1;
     box-shadow: 0px 2px 2px #dadada;
 }
-.header .logo{}
+.header .logo{
+    width: 50px;
+}
 .header .logo img{
     width: 100%;
 }
